# HS_ID

./: HS_1.py  HS_2.py  HS_2_1.py  Plot_1_1.py  Plot_1_2.py  README.md  Sim_1.py  Sim_2.py
encoder/: Cargo.toml  README.md  deviation.tex  example.py  pyproject.toml  report.tex  rustfmt.toml  time.tex  troughput.tex
encoder/benches/: troughput.rs
encoder/proptest-regressions/: test.txt
encoder/proptest-regressions/crc32/: test.txt
encoder/proptest-regressions/crc64/: test.txt
encoder/src/: crc32.rs  crc64.rs  lib.rs  test.rs
encoder/src/crc32/: test.rs
encoder/src/crc64/: test.rs
