[package]
name = "encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "encoder"
crate-type = ["cdylib","rlib"]

[dependencies]
g2p = "1.0.1"
num-traits = "0.2.15"
pyo3 = "0.18.3"
rand = "0.8.5"
sha1 = { version = "0.10.5", features = ["asm"] }
sha2 = { version = "0.10.6", features = ["asm"] }

[dev-dependencies]
criterion = "0.4.0"
proptest = "1.2.0"

[profile.bench]
debug = true

[[bench]]
name = "troughput"
harness = false
